3987.	[func]		Handle future Visual Studio 14 incompatible changes.
			[RT #37380]

3986.	[doc]		Add the BIND version number to page footers
			in the ARM. [RT #37398]

3985.	[doc]		Describe how +ndots and +search interact in dig.
			[RT #37529]

3984.	[func]		Accept 256 byte long PINs in native PKCS#11
			crypto. [RT #37410]

3982.	[doc]		Include release notes in product documentation.
			[RT #37272]

3981.	[bug]		Cache DS/NXDOMAIN independently of other query types.
			[RT #37467]

3980.	[bug]		Improve --with-tuning=large by self tuning of SO_RCVBUF
			size. [RT #37187]

3978.	[test]		Added a unit test for Diffie-Hellman key
			computation, completing change #3974. [RT #37477]

3976.	[bug]		When refreshing managed-key trust anchors, clear
			any cached trust so that they will always be
			revalidated with the current set of secure
			roots. [RT #37506]

3974.	[bug]		Handle DH_compute_key() failure correctly in
			openssldh_link.c. [RT #37477]

3972.	[bug]		Fix host's usage statement. [RT #37397]

3971.	[bug]		Reduce the cascading failures due to a bad $TTL line
			in named-checkconf / named-checkzone. [RT #37138]

3970.   [contrib]       Fixed a use after free bug in the SDB LDAP driver.
			[RT #37237]

3969.	[test]		Added 'delv' system test. [RT #36901]

3968.	[bug]		Silence spurious log messages when using 'named -[46]'.
			[RT #37308]

3967.	[test]		Add test for inlined signed zone in multiple views
			with different DNSKEY sets. [RT #35759]

3966.	[bug]		Missing dns_db_closeversion call in receive_secure_db.
			[RT #35746]

3962.	[bug]		'dig +topdown +trace +sigchase' address unhandled error
			conditions. [RT #34663]

3961.	[bug]		Forwarding of SIG(0) signed UPDATE messages failed with
			BADSIG.  [RT #37216]

3960.	[bug]		'dig +sigchase' could loop forever. [RT #37220]

3959.	[bug]		Updates could be lost if they arrived immediately
			after a rndc thaw. [RT #37233]

3958.	[bug]		Detect when writeable files have multiple references